Replacing 0602 with integration task

--- a/docs/06_add_genai_gateway_capabilities_with_api_management/0602.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/0602.md
@@ -1,206 +1,184 @@
 ---
-title: '2. Enable semantic caching for Azure OpenAI APIs'
+title: '2. Integrate APIs managed by API Management into GenAI applications'
 layout: default
 nav_order: 2
 parent: 'Exercise 06: Add GenAI Gateway Capabilities with Azure API Management'
 ---
 
-# Task 02 - Enable semantic caching for Azure OpenAI APIs (25 minutes)
+# Task 02 - Integrate APIs managed by API Management into GenAI applications (20 minutes)
 
 ## Introduction
 
-By enabling semantic caching of responses to Azure OpenAI API requests, you can reduce bandwidth and processing requirements imposed on the backend APIs and lower the latency perceived by API consumers. With semantic caching, you can return cached responses for identical prompts and prompts that are similar in meaning, even if the text isn't the same.
+In the rapidly evolving landscape of artificial intelligence, integrating APIs into generative AI (GenAI) applications has become a crucial step for developers seeking to enhance functionality and streamline processes. Azure API Management (APIM) provides a robust framework for managing, securing, and optimizing APIs, making it an ideal choice for integrating diverse APIs into GenAI applications.
 
 ## Description
 
-In this task, you enable semantic caching for your Azure OpenAI API to generate LLM responses to queries and cache those responses using Azure Cache for Redis, delivering faster responses and lowering costs. Using its built-in vector search capability, you will also perform semantic caching and evaluate the performance benefits of returning cached responses for queries.
+The previous exercises sent all calls to perform text embedding and chat completions directly to your Azure OpenAI service's API endpoint. In this task, you will integrate the Azure OpenAI API managed by API Management into the Contoso Suites Web API, sending chat completion and embedding requests through APIM and enabling the GenAI gateway capabilities and policies you enabled in the previous task to be applied.
 
-The essential tasks are as follows:
+The key tasks are as follows:
 
-1. Add your Azure Cache for Redis Enterprise cluster as an external cache in API Management (APIM).
-2. Create a backend resource in APIM named `embeddings-backend` for the embeddings API deployment that will be used by the semantic caching policy. The backend should point to the embeddings endpoint of your Azure OpenAI instance using a runtime URL like the following:
+1. Publish a *protected* product named "Contoso Web API" in APIM and add it to your Azure OpenAI API.
+2. Update token limiting policy in APIM.
+   - Increase the TPM limit to 4000 for the Web API to allow the copilot sufficient capacity to perform its duties.
+   - Set `estimate-prompt-tokens` to `false`.
 
-    ```sql
-    <YOUR_AZURE_OPENAI_ENDPOINT>openai/deployments/text-embedding-ada-002/embeddings
-    ```
+    {: .note }
+    > Leaving this flag set to `true` can result in errors where the policy cannot parse and estimate tokens for the incoming request when using a Semantic Kernel copilot agent, which may generate a chat history containing empty messages.
 
-3. Configure a semantic caching policy for your Azure OpenAI API.
-   - The policy should use the `embeddings-backend` to create embeddings to store in the cache.
-   - It should use a semantic similarity score threshold of 0.85 for matching
-   - Items should be retained in the cache for five minutes (300 seconds).
-4. Confirm semantic caching is working and evaluate the performance gains from using caching.
-   - Call the chat completions endpoint, then use the Trace function in APIM to inspect a second call and determine if a cache hit was successful.
-   - Make a second call where the user message is similar, but not identical, and re-evaluate the response using the Trace function to observe how semantic search is used to match cache items.
+3. Add new secrets named `ApiManagement:Endpoint` and `ApiManagement:ApiKey` to the `user-secrets` collection in the `ContosoSuitesWebAPI` project. The values assigned to these secrets are the Azure OpenAI API endpoint exposed by APIM and the "Contoso Web API" product subscription key, respectively.
+4. Update the `ContosoSuitesWebAPI` project to route all chat completion and embedding calls through the Azure OpenAI API endpoint defined in APIM.
+5. Confirm you can successfully make chat completion calls via the web API by creating a new maintenance request using the Maintenance Request Copilot on the **Streamlit Chat** Streamlit page.
+6. Inspect token consumption metrics emitted by the APIM policy in Application Insights. The existence of these metrics helps to verify that Azure OpenAI API calls are going through your APIM instance and that the policies you defined are working correctly.
 
 ## Success Criteria
 
-- You added an external cache in APIM pointing to your Azure Cache for Redis Enterprise cluster.
-- You created a backend resource named `embeddings-backend` for the embeddings API deployment.
-- You configued a semantic caching policy for the Azure OpenAI API.
-- You have confirmed semantic caching is working and evaluated the performance benefits of using caching with LLMs.
+- You have created a product named "Contoso Web API" in APIM that requires a subscription and has been added to the Azure OpenAI API.
+- You have updated the token limit policy for the Azure OpenAI API in APIM to allow a TPM of 4000 and have disabled prompt token estimation.
+- You have added secrets named `ApiManagement:Endpoint` and `ApiManagement:ApiKey` to the user secrets collection of the `ContosoSuitesWebAPI` project.
+- You have updated the `ContosoSuitesWebAPI` project to route all chat completion and embedding calls through the Azure OpenAI API endpoint defined in APIM.
+- You have successfully used the Maintenance Request Copilot on the **Copilot Chat** Streamlit page to generate a maintenance request.
+- You have inspected the logs in Application Insights to view the token consumption of interactions with the copilot.
 
 ## Learning Resources
 
-- [Add caching to improve performance in Azure API Management](https://learn.microsoft.com/azure/api-management/api-management-howto-cache)
-- [Enable semantic caching for Azure OpenAI APIs in Azure API Management](https://learn.microsoft.com/azure/api-management/azure-openai-enable-semantic-caching)
-- [Use an external Redis-compatible cache in Azure API Management](https://learn.microsoft.com/azure/api-management/api-management-howto-cache-external)
-- [Use Azure Cache for Redis as a semantic cache](https://learn.microsoft.com/azure/azure-cache-for-redis/cache-tutorial-semantic-cache)
-- [Cache responses to Azure OpenAI API requests](https://learn.microsoft.com/azure/api-management/azure-openai-semantic-cache-store-policy)
-- [Get cached responses of Azure OpenAI API requests](https://learn.microsoft.com/azure/api-management/azure-openai-semantic-cache-lookup-policy)
+- [API Management Products](https://learn.microsoft.com/en-us/azure/api-management/api-management-key-concepts#products)
+- [Tutorial: Create and publish a product](https://learn.microsoft.com/azure/api-management/api-management-howto-add-products?tabs=azure-portal)
+- [Subscriptions in Azure API Management](https://learn.microsoft.com/azure/api-management/api-management-subscriptions)
+- [Create subscriptions in Azure API Management](https://learn.microsoft.com/azure/api-management/api-management-howto-create-subscriptions)
 
 ## Solution
 
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
 
-- To add Azure Cache for Redis as an external cache in Azure API Management:
-  - Before adding an external cache, you must retrieve the endpoint and key of your Azure Cache for Redis instance. Navigate to your Redis Enterprise cluster resource in the [Azure portal](https://portal.azure.com/).
-  - On the **Overview** page, copy the **Endpoint** value and save it into a text editor, such as Notepad, for later use.
-  - Open the **Access keys** page from the **Settings** menu, copy the **Primary** key value, and paste it into a text edit for later use.
-  - Next, navigate to your API Management service in the [Azure portal](https://portal.azure.com/)
-  - Select **External cache** from the **Deployment + infrastructure** menu, then select **Add** on the External cache page.
+- To create and publish a *protected* product in APIM and add it to your Azure OpenAI API:
+  - Navigate to your APIM instance in the [Azure portal](https://portal.azure.com/), then select **Products** under the **APIs** menu.
+  - Select **Add** to create a new product.
+  - In the **Add product** dialog:
+    - Enter a display name of "Contoso Web API," which will automatically set the **Id** field to "contoso-web-api."
+    - Enter a description, such as "Contoso Suites Web API."
+    - Check the **Published** box.
+    - Ensure the **Requires subscription** box is checked. This flag specifies that the product is *protected,* meaning a subscription key will be required to access the product.
+    - Select the **+** below **APIs** at the bottom of the dialog and select the **Azure OpenAI API**. Adding an API allows it to be accessed using the subscription key associated with the Contoso Web API product.
+    - Select **Create**.
 
-    ![Screenshot of the APIM external cache page, with the External cache menu item and the Add button highlighted.](../../media/Solution/0602-apim-add-external-cache.png)
+        ![Screenshot of the Add product dialog, with the values specified in the instructions highlighted.](../../media/Solution/0602-apim-create-product-contoso-web-api.png)
 
-  - In the **External cache** dialog:
-  - Choose your Redis Enterprise cluster resource from the **Cache instance** dropdown.
+  - After creeating the product, select it from the Products list.
+  - On the **Contoso Web API** project page, select **Subscriptions** from the left-hand menu, then select **Add subscription** on the toolbar.
+  - In the **New Subscription** dialog, enter "contoso-web-api" into the **Name** field, "Contoso Web API" into the **Display name** field, and then select **Create**.
 
-    {: .note }
-    > You may receive an error stating, "The requested operation failed because you don't have sufficient permissions for the action: 'https:/listSecrets.'" You can safely ignore this error, as you will manually provide the connection string below.
+- To update the token limit policy applied to the Azure OpenAI API in APIM:
+  - Navigate to your API Management service's **APIs** page in the [Azure portal](https://portal.azure.com/) and select the **Azure OpenAI API**.
+  - Select **All operations** in the design panel, then open the inbound processing policies by selecting the `<\>` link within that panel.
+  
+    ![Screenshot of the design page of the Azure OpenAPI API in APIM, with the API name, All operations page, and policies link highlighted.](../../media/Solution/0602-apim-azure-openai-api-all-operations-inbound-processing-policies.png)
 
-  - Select the region you are using for resources in this exercise in the **Use from** dropdown. This value is selected by default; if not, it is labeled "(managed)" in the list.
-  - In the **Connection string** box, paste the following value, replacing the `<YOUR_AZURE_CACHE_FOR_REDIS_ENDPOINT>` and `<YOUR_AZURE_CACHE_FOR_REDIS_PRIMARY_KEY>` with the endpoint and key of your Azure Cache for Redis instance, respectively.
+  - In the **Policies** XML document, locate the `azure-openai-token-limit` policy definition within the `<inbound>` processing section.
+    - Update the `tokens-per-minute` value to `4000`.
+    - Set the `estimate-prompt-tokens` property to `false`.
 
-    ```sql
-    <YOUR_AZURE_CACHE_FOR_REDIS_ENDPOINT>,password=<YOUR_AZURE_CACHE_FOR_REDIS_PRIMARY_KEY>=,ssl=True,abortConnect=False
+        {: .note }
+        > Leaving this flag set to `true` can result in errors where the policy is unable to parse and estimate tokens for the incoming request when using a Semantic Kernel copilot agent, which may generate a chat history with empty messages.
+
+  - The updated policy definition should look like the following:
+
+    ```xml
+    <azure-openai-token-limit tokens-per-minute="4000" counter-key="@(context.Request.IpAddress)" estimate-prompt-tokens="false" tokens-consumed-header-name="consumed-tokens" remaining-tokens-header-name="remaining-tokens" />
     ```
 
   - Select **Save**.
 
-- To configure a configure a backend for the embeddings API deployment:
-  - Navigate to the **Backends** page for your API Management service, accessible from the **APIs** menu.
-  - Select **Add**.
-  - On the **Backend** dialog:
-    - Enter **embeddings-backend** for the Name.
-    - Choose **Custom URL** for the Type.
-    - Enter the following value into the **Runtime URL** box, replacing `<YOUR_AZURE_OPENAI_ENDPOINT>` with the endpoint value for your Azure OpenAI service. You can find the endpoint value on the **Keys and Endpoint** page for your Azure OpenAI service in the [Azure portal](https://portal.azure.com/).
+- To add new user secrets for the API Management endpoint and key, run the following command:
+  - Navigate to your APIM instance in the [Azure portal](https://portal.azure.com/).
+  - On the **Overview** page, copy the **Gateway URL** from the **Essentials** panel. Save the value into a text edit, such as Notepad, for use below.
+  - Select **APIs** from the **APIs** menu of your APIM instance, then select **Settings** tab of the **Azure OpenAI API**. Copy the **API URL suffix** and save it to a text editor for use below.
 
-        ```sql
-        <YOUR_AZURE_OPENAI_ENDPOINT>openai/deployments/text-embedding-ada-002/embeddings
-        ```
+    ![Screenshot of the Azure OpenAI API's settings tab, with the API URL suffix value highlighted.](../../media/Solution/0602-apim-apis-azure-openai-api-settings-url-suffix.png)
 
-    - Select **Create**.
+  - In Visual Studio Code, open a new terminal and change directories to the `ContosoSuitesWebAPI` folder. Then, run the following command to create a new secret in the `user-secrets` collection, replacing the `{YOUR_API_MANAGEMENT_ENDPOINT}` and `{YOUR_AZURE_OPENAI_API_URL_SUFFIX}` tokens with the gateway URL and API URL suffix values you copied above, respectively.
 
-- To create a semantic caching policy for your Azure OpenAI API, navigate to the **APIs** page of your API Management service in the [Azure portal](https://portal.azure.com/) and select the **Azure OpenAI API**.
-  - Select **All operations** in the design panel, then open the inbound processing policies by selecting the `<\>` link within that panel.
-
-    ![Screenshot of the design page of the Azure OpenAPI API in APIM, with the API name, All operations page, and policies link highlighted.](../../media/Solution/0602-apim-azure-openai-api-all-operations-inbound-processing-policies.png)
-
-  - In the **Policies** XML document, add an `azure-openai-semantic-cache-lookup` policy to enable semantic caching. This policy performs a cache lookup of responses to Azure OpenAI Chat Completion API requests from the configured external cache based on the vector proximity of the prompt to previous requests and a specified similarity score threshold. Add the following add within the `<inbound>` section:
-
-    ```xml
-    <azure-openai-semantic-cache-lookup
-        score-threshold="0.85"
-        embeddings-backend-id="embeddings-backend"
-        embeddings-backend-auth="system-assigned"
-        ignore-system-messages="true"
-        max-message-count="10" />
+    ```bash
+    dotnet user-secrets set "ApiManagement:Endpoint" "{YOUR_API_MANAGEMENT_ENDPOINT}/{YOUR_AZURE_OPENAI_API_URL_SUFFIX}"
     ```
 
-  - In the same **Policies** XML document, insert the following `azure-openai-semantic-cache-store` policy into the `<outbound>` section. This policy will cache responses to Azure OpenAI chat completions to your configured external cache for 300 seconds (five minutes). Response caching reduces bandwidth and processing requirements imposed on the backend Azure OpenAI API and lowers latency perceived by API consumers.
+  - Return to your APIM instance in the [Azure portal](https://portal.azure.com/), and select **Subscriptions** under the **APIs** menu.
+  - On the **Subscriptions** page, select the ellipsis at the end of the **Contoso Web API** subscription and select **Show/hide keys** in the context menu.
+  - Copy the **Primary key** value.
+  - Next, you will create another secret in the `user-secrets` collection of the Web API project. Return to the terminal window in Visual Studio Code you used in the previous step and run the following command, replacing the `{YOUR_API_MANAGEMENT_SUBSCRIPTION_KEY}` with the **Primary key** value you copied above.
 
-    ```xml
-    <azure-openai-semantic-cache-store duration="300" />
+    ```bash
+    dotnet user-secrets set "ApiManagement:ApiKey" "{YOUR_API_MANAGEMENT_SUBSCRIPTION_KEY}"
     ```
 
-  - Select **Save**. Your final policies document will look like this:
+- To update the Contoso Suites Web API to use the Azure OpenAI API exposed through Azure API Management, you must update the Kernel builder in the `Program.cs` file to use the APIM endpoint and key for all text embedding and chat completion calls.
+  - In Visual Studio Code, navigate to the `ContosoSuitesWebAPI` folder and open the `Program.cs` file.
+  - The Kernel builder defined in `Program.cs` contains calls to add chat completion and text embedding capabilities to the kernel.
+  - Within the `kernelBuilder.AddAzureOpenAIChatCompletion()` function, replace the `AzureOpenAI` configuration values used for the `endpoint` and `apiKey` properties to reference `ApiManagement:Endpoint` and `ApiManagement:ApiKey`, respectively. The updated function call should look like this:
 
-    ```xml
-    <policies>
-        <inbound>
-            <set-backend-service id="apim-generated-policy" backend-id="azure-openai-api-openai-endpoint" />
-            <azure-openai-token-limit tokens-per-minute="500" counter-key="@(context.Request.IpAddress)" estimate-prompt-tokens="true" tokens-consumed-header-name="consumed-tokens" remaining-tokens-header-name="remaining-tokens" />
-            <azure-openai-emit-token-metric>
-                <dimension name="API ID" />
-                <dimension name="Client IP address" value="@(context.Request.IpAddress)" />
-            </azure-openai-emit-token-metric>
-            <azure-openai-semantic-cache-lookup score-threshold="0.85" embeddings-backend-id="embeddings-backend" embeddings-backend-auth="system-assigned" ignore-system-messages="true" max-message-count="10" />
-            <authentication-managed-identity resource="https://cognitiveservices.azure.com/" />
-            <base />
-        </inbound>
-        <backend>
-            <base />
-        </backend>
-        <outbound>
-            <azure-openai-semantic-cache-store duration="300" />
-            <base />
-        </outbound>
-        <on-error>
-            <base />
-        </on-error>
-    </policies>
+    ```csharp
+    kernelBuilder.AddAzureOpenAIChatCompletion(
+        deploymentName: builder.Configuration["AzureOpenAI:DeploymentName"]!,
+        endpoint: builder.Configuration["ApiManagement:Endpoint"]!,
+        apiKey: builder.Configuration["ApiManagement:ApiKey"]!
+    );
     ```
 
-- Confirm semantic caching is working by executing a chat completion request via the APIM API **Test** page.
-  - Select the **Test** tab on the API design page for the Azure OpenAI API, then select the **Creates a completion for the chat message** endpoint.
-  - On the **Creates a completion for the chat message** page, enter the following under **Template parameters**:
-    - **deployment-id**: Enter "gpt-4o"
-    - **api-version**: Enter "2024-06-01"
-  - Scroll down to the **Request body** section, ensure **Raw** is selected, and paste the following into the text box.
+  - In the `kernelBuilder.AddAzureOpenAITextEmbeddingGeneration()` function, update the `endpoint` and `apiKey` properties to retrieve the `ApiManagement:Endpoint` and `ApiManagement:ApiKey`, respectively. The updated function call, including the `#pragma warning` directives wrapping it, will look similar to the following:
 
-    ```json
-    {
-        "messages":[
-            {"role": "system", "content": "You are a sarcastic unhelpful assistant."},
-            {"role": "user", "content": "Tell me an interesting story about AI."}
-        ]
-    }
+    ```csharp
+    #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
+        kernelBuilder.AddAzureOpenAITextEmbeddingGeneration(
+            deploymentName: builder.Configuration["AzureOpenAI:EmbeddingDeploymentName"]!,
+            endpoint: builder.Configuration["ApiManagement:Endpoint"]!,
+            apiKey: builder.Configuration["ApiManagement:ApiKey"]!
+        );
+    #pragma warning restore SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
     ```
 
-  - Select **Send** at the bottom of the page.
-  - Scroll to the page's **HTTP response** section and ensure you received a `200 OK` response, indicated at the top of the headers. Also, note the `consumed-tokens` header value.
-  - Send the request again, but use the **Trace** button to send it. This button enables trace output, providing debug details about the request and response.
-  - In the **HTTP response**, note the `consumed-tokens` header value. If a cache hit was found, this should be `0`, as a call to the backend Azure OpenAI completions endpoint is avoided, and the cached response is used.
-  - In the **HTTP response** section, select the **Trace** tab, then scroll to the bottom of the **Inbound** section and locate the sections named `OpenAISemanticCacheLookupPolicy` and `azure-openai-semantic-cache-store`.
+- To confirm that you can successfully make chat completion calls via the web API, use the Maintenance Request Copilot in the **Copilot Chat** Streamlit UI to create a new maintenance request.
+  - Run the API locally by opening a new terminal window in Visual Studio code, navigating to the `src\ContosoSuitesWebAPI` directory, and starting the API using the following command:
 
-    The `OpenAISemanticCacheLookupPolicy` section will indicate if a matching cache entry was found and the vector distance of the match, such as:
-
-    ```json
-    {
-        "message": "Found cache entry using semantic search within threshold of '0.85', and similarity score '1.0000001' under the vary-by partition 'None'. Vector distance is '-1.1920929E-07'."
-    }
+    ```bash
+    dotnet run
     ```
 
-    The `azure-openai-semantic-cache-store` section provides details about the matched cached key, like the following:
+  - Open another terminal window, navigate to the `src\ContosoSuitesDashboard` directory, and run the following command to start the Streamlit dashboard:
 
-    ```json
-    {
-        "message": "Cache lookup resulted in a hit! Cached response will be used. Processing will continue from the step in the response pipeline that is after the corresponding `cache-store`.",
-        "cacheKey": "ApimSemanticCache:V1:Dim1536:eastus2preprobv27853a0d5akdtwebvz3bjoiko0fs8otzsfs.655045:azure-openai-api;rev=1.655351:ChatCompletions_Create:4::c10c47b8-696f-4997-adfc-0d180f52fadc"
-    }
+    ```bash
+    python -m streamlit run Index.py
     ```
 
-    When a cache match is found, processing will pull the LLM response from the cached record and bypass sending the request to the Azure OpenAI chat completions endpoint. The resulting response will have a `consumed-tokens` value of `0`. You will also notice a faster response time.
+  - Select the **Copilot Chat** page using the left-hand menu, then submit the following conversational prompts:
+    - First, send a message requesting help filing an issue, such as: "Please help me create a maintenance request for a room at the Grand Regency."
+      - You should get a response asking for more information.
+    - Next, provide details about the issue to the copilot, such as: "There is a leak coming from under the kitchen sink. The customer reported it when returning to the room after being out most of the day. The carpet in the room is soaked."
+      - You should get a reply asking for the room number.
+    - Provide a room number, such as: "It is in room 303."
+      - You should get a reply that the request was created successfully.
+    - Send a final message, asking the copilot to provide you with the ID of the maintenance request it created.
 
-  - Next, use the **Trace** button to execute a variation of the query by sending in the following request body:
+    {: .note }
+    > If you receive a 429 error message at any point during the conversation, you may need to go back into the `azure-openai-token-limit` policy definition in APIM and increase the `tokens-per-minute` value.
 
-    ```json
-    {
-        "messages":[
-            {"role": "system", "content": "You are a sarcastic unhelpful assistant."},
-            {"role": "user", "content": "Tell me a boring story about AI."}
-        ]
-    }
+- To inspect the token consumption metrics emitted by the APIM policy in Application Insights.
+  - From your API Management service in the [Azure portal](https://portal.azure.com/), expand the **Monitoring** menu and select **Application Insights**, then select your Application Insights instance from the list.
+  - On the Application Insights page, expand the **Monitoring** menu and select **Logs**.
+  - On the **Logs** page, execute the following Kusto query to look for records in the `customMetrics` table:
+
+    ```kusto
+    customMetrics
+    | where timestamp > ago(1h)
+    | where name in ('Completion Tokens', 'Prompt Tokens', 'Total Tokens')
+    | extend
+        ItemId = substring(itemId, 24),
+        ApiId = tostring(customDimensions['API ID']),
+        ClientIpAddress = tostring(customDimensions['Client IP address'])
+    | summarize
+        CompletionTokens = sumif(value, name == 'Completion Tokens'),
+        PromptTokens = sumif(value, name == 'Prompt Tokens'),
+        TotalTokens = sumif(value, name == 'Total Tokens')
+        by ItemId, ApiId, ClientIpAddress
     ```
-
-  - Check the `OpenAISemanticCacheLookupPolicy` section to determine if a similar prompt resulted in a matching cache entry. You should see a value like the following:
-
-    ```json
-    {
-        "message": "Found cache entry using semantic search within threshold of '0.85', and similarity score '0.95418453' under the vary-by partition 'None'. Vector distance is '0.045815468'."
-    }
-    ```
-
-    With semantic caching, you can return cached responses for identical prompts and prompts that are similar in meaning, even if the text isn't the same. The text of this second request is not the same, but it has a similar meaning, allowing a match to be found within the cache. Note the similarity score provided in the output message. The score indicates how semantically close the two requests were. You can adjust the `score-threshold` property of the `azure-openai-semantic-cache-lookup` policy definition to define how similar cached records should be to the incoming request to be identified as a match.
 
 </details>
