--- a/docs/07_resource_cleanup/0701.md
+++ b/docs/07_resource_cleanup/0701.md
@@ -7,26 +7,34 @@ parent: 'Exercise 07: Workshop resource cleanup'
 
 # Task 01: Delete Azure resources and GitHub codespaces
 
-## Description
+Once you have completed the exercises in this workshop, delete the Azure resources and GitHub codespaces you created. You are charged for the configured capacity in Azure, so this ensures you are not incurring charges for undeleted workshop resources.
 
 In this task, you will delete the GitHub codespace and Azure resources you created for this workshop.
 
-The key tasks are as follows:
+## GitHub Codespaces Cleanup
 
-1. Delete your GitHub codespaces instance.
-2. Delete the Azure resource group and all resources you created for this workshop.
+To delete your GitHub codespaces instance:
 
-## Success criteria
-
-- You have deleted your GitHub codespaces instance.
-- All Azure resources created for the workshop have been deleted.
-
-## Solution
-
-- To delete your GitHub codespaces instance:
-  - TODO: Add steps for this
+1. Navigate to your forked GitHub repository.
+2. Select the **Code** button.
+3. Next to your active Codespace, select the ellipsis (...) button.
+4. Choose the **Delete** option.
+5. In the modal confirmation dialog, select **Delete** to confirm that you wish to delete the Codespace.
 
     ![Screenshot of how to delete the GitHub codespaces instances created for this workshop.](../../media/Solution/0701-delete-codespace.png)
 
-- To delete the Azure resources you created as part of this workshop:
-  - Delete the resource group...
+## Delete Azure resources
+
+Follow these instructions to delete your Azure resource group and all resources you created for this lab.
+
+1. Navigate to the [Azure portal](https://portal.azure.com/), and on the home page, select **Resource groups** under Azure services.
+
+      ![Screenshot of Resource groups highlighted by a red box under Azure services in the Azure portal.](../../media/Solution/0701-azure-portal-home-azure-services-resource-groups.png)
+
+2. In the filter for any field search box, enter the name of the resource group you created for this lab, and then select your resource group from the list.
+
+3. On the **Overview** page of your resource group, select **Delete resource group**.
+
+    ![Screenshot of the Overview blade of the resource group with the Delete resource group button highlighted by a red box.](../../media/Solution/0701-resource-group-delete.png)
+
+4. In the confirmation dialog, enter the resource group name you are deleting to confirm and then select **Delete**.
